<resources>
    <string name="app_name">Aamoomor</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Log_in">Log in</string>
    <string name="Subscribe">Subscribe now !!</string>
    <string name="Email">Email</string>
    <string name="Subscribee">Subscribe</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Next">Next</string>
    <string name="Job">Job</string>
    <string name="Description">Description</string>
    <string name="Descriptionn">Tell us a bit about you ...</string>
    <string name="Create_Account">Create Account</string>
    <string name="Verfication_code" />
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="HomePage">Home Page</string>
    <string name="houses_User">My Estate</string>
    <string name="Name">Name</string>
    <string name="Adress">Adress</string>
    <string name="Type">Type</string>
    <string name="Owner">Owner</string>
    <string name="Forr">For</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="Livingrooms">Livingrooms</string>
    <string name="Bathrooms">Bathrooms</string>
    <string name="Kitchen">Kitchen</string>
    <string name="Garden">Garden</string>
    <string name="Pictrues">Pictures</string>
    <string name="Prix">Price</string>
    <string name="Post">Post</string>
    <string name="Add_Pictures">  Add_Pictures  </string>
    <string name="Prixx">Price in dt</string>
    <string name="Biding">Place your bid here in dt</string>
    <string name="State">State</string>
    <string name="msg">Type your message here ...</string>
</resources>
