<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity=""
        android:id="@+id/layout">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"

            android:src="@drawable/background_profile"
            app:srcCompat="@drawable/background_profile" />

        <ImageView
            android:layout_width="250dp"
            android:id="@+id/Estate_Profile_Thumb_nail"
            android:layout_height="250dp"
            android:src="@drawable/man"

            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:scaleType="centerCrop"/>


        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:layout_marginTop="-32dp"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/Username"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_marginTop="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/profile_layout"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <LinearLayout
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Name"
                        android:textSize="20dp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Adress"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Type"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Forr"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Livingrooms"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/bedrooms"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Bathrooms"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Kitchen"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Garden"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Prix"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"

                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/Estate_Profile_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:hint="@string/Name" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:hint="@string/Adress"
                        
                        android:id="@+id/Estate_Profile_Adress"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Type"
                        
                        android:id="@+id/Estate_Profile_Type"
                        />



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Forr"
                        
                        android:id="@+id/Estate_Profile_for"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Livingrooms"
                        
                        android:id="@+id/Estate_Profile_Livingrooms"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/bedrooms"
                        
                        android:id="@+id/Estate_Profile_bedrooms"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Bathrooms"
                        
                        android:id="@+id/Estate_Profile_Bathrooms"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Kitchen"
                        
                        android:id="@+id/Estate_Profile_Kitchen"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Garden"
                        
                        android:id="@+id/Estate_Profile_Gardens" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/Prix"
                        
                        android:id="@+id/Estate_Profile_Prix" />


                </LinearLayout>


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/Pictrues"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Estate_Profile_Receptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_text_color_strong"
                    android:background="@color/colorAccent"
                    android:text="@string/Post"
                    android:id="@+id/add_estate_button"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>