<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity=""
        android:id="@+id/layout">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"

            android:src="@drawable/background_profile"
            app:srcCompat="@drawable/background_profile" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/man"
            app:civ_border_color="#3f51b5"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:paddingBottom="24dp">
            <TextView
                android:id="@+id/T_V_Profile_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/Username"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_marginTop="20dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:orientation="horizontal"
            android:weightSum="3"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/First_Name"/>
            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Last_Name"/>
            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Email"/>
            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Phone_Number"/>
            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Job"/>
            <TextView
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Description"/>


        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/T_V_Profile_First_name"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/First_Name"/>
                <TextView
                    android:id="@+id/T_V_Profile_Last_name"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Last_Name"/>
                <TextView
                    android:id="@+id/T_V_Profile_Email"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Email"/>
                <TextView
                    android:id="@+id/T_V_Profile_Phone_Number"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Phone_Number"/>
                <TextView
                    android:id="@+id/T_V_Profile_Job"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Job"/>
                <TextView
                    android:id="@+id/T_V_Profile_Desccription"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Description"/>
            </LinearLayout>


        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/houses_User"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Profile_Receptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>